Title update & New chapter

--- a/00_Preambule.tex
+++ b/00_Preambule.tex
@@ -1,7 +1,7 @@
 % Préambule
 %=========
 
-Ce document est un syllabus collaboratif pour le cours \emph{INGI1123 Calculabilité et complexité}  donné à l'Université catholique de Louvain par Yves Deville.  Ces notes sont en cours d'élaboration et sont le fruit d'un travail collaboratif entre les étudiants de ce cours, avec une supervision de Yves Deville et différents chercheurs et assistants.
+Ce document est un syllabus collaboratif pour le cours  \emph{LINFO1123 Calculabilité, logique et complexité} (anciennement \emph{INGI1123 Calculabilité et complexité})  donné à l'Université catholique de Louvain par Yves Deville.  Ces notes sont en cours d'élaboration et sont le fruit d'un travail collaboratif entre les étudiants de ce cours, avec une supervision de Yves Deville et différents chercheurs et assistants.
 
 Ce syllabus est sous licence Creative Commons CC-BY-SA.  Les étudiants sont encouragés à participer à l'élaboration de ce syllabus.
 
