--- a/00_Title.tex
+++ b/00_Title.tex
@@ -53,7 +53,7 @@
 	
 	\vspace{0.75\baselineskip} % Whitespace above the title
 	
-	{\LARGE INGI1123 \\ Calculabilité et Complexité \\} % Title
+	{\LARGE LINFO1123 \\ Calculabilité, logique et complexité \\} % Title
 	
 	\vspace{0.75\baselineskip} % Whitespace below the title
 	
