--- a/02_Concepts.tex
+++ b/02_Concepts.tex
@@ -134,7 +134,7 @@ ont le même cardinal s'il existe une bijection entre eux.
 Une autre manière plus intuitive de voir si un ensemble infini est énumérable est de voir s'il existe une énumération de ses éléments. Cela veut dire que nous pouvons trouver une numérotation (parmis les entiers $\N$) pour chaque élément de l'ensemble. A chaque élément de l'ensemble sera lié un numéro dans $\N$ et vice-versa, ce qui montre bien l'idée de bijection entre l'ensemble et $\N$.
 
 \begin{myprop}
-Un ensemble infini $E$ est énumérable s'il nous est possible de lister ses éléments.
+Un ensemble infini $E$ est énumérable s'il est possible de lister ses éléments.
 \[
 e_0, e_1, e_2, \ldots , e_n, \ldots
 \]
